Migrate to Java 21 - code