@@ -66,7 +66,7 @@ class ProjectInheritanceTest extends AbstractProjectInheritanceTestCase {
         // Value taken from p2
         // ----------------------------------------------------------------------
 
-        assertEquals("mailing-list", p4.getMailingLists().get(0).getName());
+        assertEquals("mailing-list", p4.getMailingLists().getFirst().getName());
 
         // ----------------------------------------------------------------------
         // Value taken from p1
