@@ -31,6 +31,6 @@ public class BuildThreadFactory implements ThreadFactory {
 
     @Override
     public Thread newThread(Runnable r) {
-        return new Thread(r, String.format("%s-%d", PREFIX, id.getAndIncrement()));
+        return new Thread(r, "%s-%d".formatted(PREFIX, id.getAndIncrement()));
     }
 }
