@@ -45,102 +45,105 @@ class XmlNodeImplTest {
 
     @Test
     void testCombineChildrenAppend() throws Exception {
-        String lhs = "<configuration>\n"
-                + "    <plugins>\n"
-                + "        <plugin>\n"
-                + "            <groupId>foo.bar</groupId>\n"
-                + "            <artifactId>foo-bar-plugin</artifactId>\n"
-                + "            <configuration>\n"
-                + "                <plugins>\n"
-                + "                    <plugin>\n"
-                + "                        <groupId>org.apache.maven.plugins</groupId>\n"
-                + "                        <artifactId>maven-compiler-plugin</artifactId>\n"
-                + "                    </plugin>\n"
-                + "                    <plugin>\n"
-                + "                        <groupId>org.apache.maven.plugins</groupId>\n"
-                + "                        <artifactId>maven-surefire-plugin</artifactId>\n"
-                + "                        <foo>\n"
-                + "                            <properties combine.children=\"append\">\n"
-                + "                                <property>\n"
-                + "                                    <name>prop2</name>\n"
-                + "                                    <value>value2</value>\n"
-                + "                                </property>\n"
-                + "                            </properties>\n"
-                + "                        </foo>\n"
-                + "                    </plugin>\n"
-                + "                </plugins>\n"
-                + "            </configuration>\n"
-                + "        </plugin>\n"
-                + "    </plugins>\n"
-                + "</configuration>";
+        String lhs = """
+                <configuration>
+                    <plugins>
+                        <plugin>
+                            <groupId>foo.bar</groupId>
+                            <artifactId>foo-bar-plugin</artifactId>
+                            <configuration>
+                                <plugins>
+                                    <plugin>
+                                        <groupId>org.apache.maven.plugins</groupId>
+                                        <artifactId>maven-compiler-plugin</artifactId>
+                                    </plugin>
+                                    <plugin>
+                                        <groupId>org.apache.maven.plugins</groupId>
+                                        <artifactId>maven-surefire-plugin</artifactId>
+                                        <foo>
+                                            <properties combine.children="append">
+                                                <property>
+                                                    <name>prop2</name>
+                                                    <value>value2</value>
+                                                </property>
+                                            </properties>
+                                        </foo>
+                                    </plugin>
+                                </plugins>
+                            </configuration>
+                        </plugin>
+                    </plugins>
+                </configuration>""";
 
-        String rhs = "<configuration>\n"
-                + "    <plugins>\n"
-                + "        <plugin>\n"
-                + "            <groupId>foo.bar</groupId>\n"
-                + "            <artifactId>foo-bar-plugin</artifactId>\n"
-                + "            <configuration>\n"
-                + "                <plugins>\n"
-                + "                    <plugin>\n"
-                + "                        <groupId>org.apache.maven.plugins</groupId>\n"
-                + "                        <artifactId>maven-compiler-plugin</artifactId>\n"
-                + "                        <bar>\n"
-                + "                            <value>foo</value>\n"
-                + "                        </bar>\n"
-                + "                    </plugin>\n"
-                + "                    <plugin>\n"
-                + "                        <groupId>org.apache.maven.plugins</groupId>\n"
-                + "                        <artifactId>maven-surefire-plugin</artifactId>\n"
-                + "                        <foo>\n"
-                + "                            <properties>\n"
-                + "                                <property>\n"
-                + "                                    <name>prop1</name>\n"
-                + "                                    <value>value1</value>\n"
-                + "                                </property>\n"
-                + "                            </properties>\n"
-                + "                        </foo>\n"
-                + "                    </plugin>\n"
-                + "                </plugins>\n"
-                + "            </configuration>\n"
-                + "        </plugin>\n"
-                + "    </plugins>\n"
-                + "</configuration>";
+        String rhs = """
+                <configuration>
+                    <plugins>
+                        <plugin>
+                            <groupId>foo.bar</groupId>
+                            <artifactId>foo-bar-plugin</artifactId>
+                            <configuration>
+                                <plugins>
+                                    <plugin>
+                                        <groupId>org.apache.maven.plugins</groupId>
+                                        <artifactId>maven-compiler-plugin</artifactId>
+                                        <bar>
+                                            <value>foo</value>
+                                        </bar>
+                                    </plugin>
+                                    <plugin>
+                                        <groupId>org.apache.maven.plugins</groupId>
+                                        <artifactId>maven-surefire-plugin</artifactId>
+                                        <foo>
+                                            <properties>
+                                                <property>
+                                                    <name>prop1</name>
+                                                    <value>value1</value>
+                                                </property>
+                                            </properties>
+                                        </foo>
+                                    </plugin>
+                                </plugins>
+                            </configuration>
+                        </plugin>
+                    </plugins>
+                </configuration>""";
 
-        String result = "<configuration>\n"
-                + "    <plugins>\n"
-                + "        <plugin>\n"
-                + "            <groupId>foo.bar</groupId>\n"
-                + "            <artifactId>foo-bar-plugin</artifactId>\n"
-                + "            <configuration>\n"
-                + "                <plugins>\n"
-                + "                    <plugin>\n"
-                + "                        <groupId>org.apache.maven.plugins</groupId>\n"
-                + "                        <artifactId>maven-compiler-plugin</artifactId>\n"
-                + "                        <bar>\n"
-                + "                            <value>foo</value>\n"
-                + "                        </bar>\n"
-                + "                    </plugin>\n"
-                + "                    <plugin>\n"
-                + "                        <groupId>org.apache.maven.plugins</groupId>\n"
-                + "                        <artifactId>maven-surefire-plugin</artifactId>\n"
-                + "                        <foo>\n"
-                + "                            <properties combine.children=\"append\">\n"
-                + "                                <property>\n"
-                + "                                    <name>prop1</name>\n"
-                + "                                    <value>value1</value>\n"
-                + "                                </property>\n"
-                + "                                <property>\n"
-                + "                                    <name>prop2</name>\n"
-                + "                                    <value>value2</value>\n"
-                + "                                </property>\n"
-                + "                            </properties>\n"
-                + "                        </foo>\n"
-                + "                    </plugin>\n"
-                + "                </plugins>\n"
-                + "            </configuration>\n"
-                + "        </plugin>\n"
-                + "    </plugins>\n"
-                + "</configuration>";
+        String result = """
+                <configuration>
+                    <plugins>
+                        <plugin>
+                            <groupId>foo.bar</groupId>
+                            <artifactId>foo-bar-plugin</artifactId>
+                            <configuration>
+                                <plugins>
+                                    <plugin>
+                                        <groupId>org.apache.maven.plugins</groupId>
+                                        <artifactId>maven-compiler-plugin</artifactId>
+                                        <bar>
+                                            <value>foo</value>
+                                        </bar>
+                                    </plugin>
+                                    <plugin>
+                                        <groupId>org.apache.maven.plugins</groupId>
+                                        <artifactId>maven-surefire-plugin</artifactId>
+                                        <foo>
+                                            <properties combine.children="append">
+                                                <property>
+                                                    <name>prop1</name>
+                                                    <value>value1</value>
+                                                </property>
+                                                <property>
+                                                    <name>prop2</name>
+                                                    <value>value2</value>
+                                                </property>
+                                            </properties>
+                                        </foo>
+                                    </plugin>
+                                </plugins>
+                            </configuration>
+                        </plugin>
+                    </plugins>
+                </configuration>""";
 
         XmlNode leftDom = toXmlNode(lhs);
         XmlNode rightDom = toXmlNode(rhs);
@@ -343,13 +346,13 @@ class XmlNodeImplTest {
 
         XmlNode result = XmlService.merge(leftDom, rightDom);
         assertEquals(4, getChildren(result, "topsub1").size());
-        assertEquals("t2s1Value", getChildren(result, "topsub1").get(0).value());
+        assertEquals("t2s1Value", getChildren(result, "topsub1").getFirst().value());
         assertEquals("t2s2Value", getChildren(result, "topsub1").get(1).value());
         assertEquals("t1s1Value", getChildren(result, "topsub1").get(2).value());
         assertEquals("t1s2Value", getChildren(result, "topsub1").get(3).value());
 
         assertEquals("left", result.inputLocation());
-        assertEquals("right", getChildren(result, "topsub1").get(0).inputLocation());
+        assertEquals("right", getChildren(result, "topsub1").getFirst().inputLocation());
         assertEquals("right", getChildren(result, "topsub1").get(1).inputLocation());
         assertEquals("left", getChildren(result, "topsub1").get(2).inputLocation());
         assertEquals("left", getChildren(result, "topsub1").get(3).inputLocation());
@@ -513,7 +516,7 @@ class XmlNodeImplTest {
 
         assertEquals(1, items.children().size());
 
-        XmlNode item = items.children().get(0);
+        XmlNode item = items.children().getFirst();
         assertEquals("three", item.value());
         assertEquals("child", item.inputLocation());
     }
@@ -561,7 +564,7 @@ class XmlNodeImplTest {
 
         assertEquals(3, items.children().size());
 
-        assertNull(items.children().get(0).value());
+        assertNull(items.children().getFirst().value());
         assertEquals("test", items.children().get(1).value());
         assertNull(items.children().get(2).value());
     }
@@ -636,27 +639,31 @@ class XmlNodeImplTest {
 
     @Test
     void testMergeCombineChildrenAppendOnRecessive() throws XMLStreamException, IOException {
-        String dominant = "<relocations>\n" + "  <relocation>\n"
-                + "    <pattern>org.apache.shiro.crypto.CipherService</pattern>\n"
-                + "    <shadedPattern>org.apache.shiro.crypto.cipher.CipherService</shadedPattern>\n"
-                + "  </relocation>\n"
-                + "</relocations>";
-        String recessive = "<relocations combine.children=\"append\">\n"
-                + "  <relocation>\n"
-                + "    <pattern>javax.faces</pattern>\n"
-                + "    <shadedPattern>jakarta.faces</shadedPattern>\n"
-                + "  </relocation>\n"
-                + "</relocations>";
-        String expected = "<relocations combine.children=\"append\">\n"
-                + "  <relocation>\n"
-                + "    <pattern>javax.faces</pattern>\n"
-                + "    <shadedPattern>jakarta.faces</shadedPattern>\n"
-                + "  </relocation>\n"
-                + "  <relocation>\n"
-                + "    <pattern>org.apache.shiro.crypto.CipherService</pattern>\n"
-                + "    <shadedPattern>org.apache.shiro.crypto.cipher.CipherService</shadedPattern>\n"
-                + "  </relocation>\n"
-                + "</relocations>";
+        String dominant = """
+                <relocations>
+                  <relocation>
+                    <pattern>org.apache.shiro.crypto.CipherService</pattern>
+                    <shadedPattern>org.apache.shiro.crypto.cipher.CipherService</shadedPattern>
+                  </relocation>
+                </relocations>""";
+        String recessive = """
+                <relocations combine.children="append">
+                  <relocation>
+                    <pattern>javax.faces</pattern>
+                    <shadedPattern>jakarta.faces</shadedPattern>
+                  </relocation>
+                </relocations>""";
+        String expected = """
+                <relocations combine.children="append">
+                  <relocation>
+                    <pattern>javax.faces</pattern>
+                    <shadedPattern>jakarta.faces</shadedPattern>
+                  </relocation>
+                  <relocation>
+                    <pattern>org.apache.shiro.crypto.CipherService</pattern>
+                    <shadedPattern>org.apache.shiro.crypto.cipher.CipherService</shadedPattern>
+                  </relocation>
+                </relocations>""";
 
         XmlNode d = toXmlNode(dominant);
         XmlNode r = toXmlNode(recessive);
